--- a/style.css
+++ b/style.css
@@ -27,18 +27,17 @@ html {
 
 /* Example backgrounds for different levels */
 #level-intro {
-    background: red;
-    /* Temporarily set to red to ensure visibility */
+    background: url('/images/intro-background.png') no-repeat center center/cover;
 }
 
 #level-about {
-    background: url('/images/about-background.jpg') no-repeat center center/cover;
+    background: url('/images/about-background.png') no-repeat center center/cover;
 }
 
 #level-projects {
-    background: url('/images/projects-background.jpg') no-repeat center center/cover;
+    background: url('/images/projects-background.png') no-repeat center center/cover;
 }
 
 #level-contact {
-    background: url('/images/contact-background.jpg') no-repeat center center/cover;
+    background: url('/images/contact-background.png') no-repeat center center/cover;
 }
