--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url('images/space-background.jpg') no-repeat center center fixed;
+    background: url('/images/space-background.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
