--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ body {
 }
 
 #contactForm button {
-    background: #000;
+    background: #111;
     /* Black background */
     border: 2px solid #40e0d0;
     /* Turquoise outline */
@@ -113,7 +113,7 @@ body {
 #contactForm button:hover {
     background: #40e0d0;
     /* Turquoise background on hover */
-    color: #000;
+    color: #111;
     /* Black text on hover */
 }
 
@@ -121,4 +121,46 @@ body {
 #formOutput {
     margin-top: 20px;
     color: #fff;
+}
+
+
+/* circuit */
+
+.circuit-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circuit {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.central-text {
+    z-index: 1;
+    /* Ensure the text is above the SVG */
+}
+
+/* Initial hidden path style */
+.path {
+    stroke: #40e0d0;
+    stroke-width: 2;
+    fill: none;
+    stroke-dasharray: 1000;
+    /* Length should be longer than the path itself */
+    stroke-dashoffset: 1000;
+    /* Start with a full offset to hide the path */
+    transition: stroke-dashoffset 2s;
+    /* Animation duration */
+}
+
+/* On activation, the path will draw itself */
+.path.drawn {
+    stroke-dashoffset: 0;
+    /* Setting offset to 0 to draw the path */
 }
