--- a/styles.css
+++ b/styles.css
@@ -1,166 +1,627 @@
-/* styles.css */
-html {
-    height: 100%;
-}
-
-body {
+* {
     margin: 0;
     padding: 0;
-    background: #111;
-    color: #40e0d0;
-    font-family: 'Arial', sans-serif;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+}
+:root {
+    --bg-color: #080808;
+    --second-bg-color: #131313;
+    --text-color: #ffffff;
+    --main-color: #49fbe9;
+}
+
+html{
+    font-size: 60%;
+    overflow-x: hidden;
+}
+body{
+    background: var(--bg-color);
+    color: var(--text-color);
+}
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 4rem 12% 4rem;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 5;
+}
+.logo{
+    font-size: 3rem;
+    color: var(--text-color);
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+.logo:hover{
+    transform: scale(1.1);
+
+}
+.logo span{
+    text-shadow: 0 0 25px var(--main-color);
+}
+.navbar a{
+    font-size: 1.8rem;
+    color: var(--text-color);
+    margin-left: 4rem;
+    font-weight: 500;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
+}
+.navbar a:hover,
+.navbar a:active{
+    color: var(--main-color);
+    border-bottom: 3px solid var(--main-color);
+}
+#menu-icon{
+    font-size: 3.6rem;
+    color: var(--main-color);
+    display: none;
+}
+
+section{
+    min-height: 100vh;
+    padding: 10rem 12% 10rem;
+}
+.home{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15rem;
+}
+.home-content{
     display: flex;
     flex-direction: column;
-    height: 100%;
-}
-
-.menu {
-    display: flex;
+    align-items: baseline;
+    text-align: left;
     justify-content: center;
-    padding: 10px 0;
+    margin-top: 3rem;
 }
-
-.menu button {
-    background: none;
-    border: none;
-    color: #40e0d0;
-    font-size: 20px;
-    margin: 0 15px;
-    padding: 10px;
+span{
+    color: var(--main-color);
+}
+.logo span{
+    color: var(--main-color);
+}
+.home-content h3{
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 3.5rem;
+}
+.home-content h1{
+    font-size: 7rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    line-height: 1;
+}
+.home-img{
+    border-radius: 50%;
+}
+.home-img img{
+    position: relative;
+    top: 3rem;
+    width: 32vw;
+    border-radius: 50%;
+    box-shadow: 0 0 25px var(--main-color);
     cursor: pointer;
-    transition: color 0.3s;
+    transition: 0.4s ease-in-out;
+}
+.home-content p{
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.8;
+    max-width: 1000px;
+}
+.social-icons a{
+     display: inline-flex;
+     justify-content: center;
+     align-items: center;
+     width: 4.5rem;
+     height: 4.5rem;
+     background: transparent;
+     border: 2px solid var(--main-color);
+     font-size: 2.5rem;
+     border-radius: 50%;
+     color: var(--main-color);
+     margin: 3rem 1.5rem 3rem 0;
+     transition: 0.3s ease-in-out;
+}
+.social-icons a:hover{
+    color: var(--text-color);
+    transform: scale(1.3)translateY(-5px);
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+}
+.btn{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    color: black;
+    border: 2px solid transparent;
+    letter-spacing: 0.1rem;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
+.btn:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 50px var(--main-color);
+}
+.btn-group{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+.btn-group a:nth-of-type(2){
+    background-color: black;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 0 0 25px transparent;
+}
+.btn-group a:nth-of-type(2):hover{
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+    color: black;
+}
+.text-animation{
+    font-size: 34px;
+    font-weight: 600;
+    min-width: 280px;
+}
+.text-animation span{
+    position: relative;
+}
+.text-animation span::before{
+    content: "Game Developer";
+    color: var(--main-color);
+    animation: words 20s infinite;
+}
+.text-animation span::after{
+    content: "";
+    background-color: var(--bg-color);
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    border-left: 3px solid var(--bg-color);
+    right: -8px;
+    animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
+}@keyframes cursor{
+    to{
+        border-left: 2px solid var(--main-color);
+    }
+}
+@keyframes words {
+    0%, 20% {
+        content: "Software Engineer";
+    }
+    21%, 40% {
+        content: "Game Designer";
+    }
+    41%, 60% {
+        content: "Software Tester";
+    }
+    61%, 80% {
+        content: "Game Developer";
+    }
+    81%, 100% {
+        content: "Sound Designer";
+    }
+}
+@keyframes typing {
+    10%,
+    15%,
+    30%,
+    35%,
+    50%,
+    55%,
+    70%,
+    75%,
+    90%,
+    95% {
+        width: 0;
+    }
+    5%,
+    20%,
+    25%,
+    40%,
+    45%,
+    60%,
+    65%,
+    80%,
+    85% {
+        width: calc(100% + 8px);
+    }
+}
+.heading{
+    font-size: 8rem;
+    text-align: center;
+    margin: 5rem 0;
+}
+.aboutme{
+    padding: 100px 15px;
+    background: var(--second-bg-color);
+}
+.aboutme h2{
+    margin-bottom: 5rem;
+}
+.timeline-items{
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+.timeline-items::before{
+    content: "";
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background-color: var(--main-color);
+    left: calc(50% - 1px);
+}
+.timeline-item{
+    margin-bottom: 40px;
+    width: 100%;
+    position: relative;
+}
+.timeline-item:last-child{
+    margin-bottom: 0;
+}
+.timeline-item:nth-child(odd){
+    padding-right: calc(50% + 30px);
+    text-align: right;
+}
+.timeline-item:nth-child(even){
+    padding-left: calc(50% + 30px);
+}
+.timeline-dot{
+    height: 21px;
+    width: 21px;
+    background-color: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color);
+    position: absolute;
+    left: calc(50% - 8px);
+    border-radius: 50%;
+    top: 10px;
+}
+.timeline-date{
+    font-size: 20px;
+    font-weight: 800;
+    color: white;
+    margin: 6px 0 15px;
+}
+.timeline-content{
+    background-color: var(--bg-color);
+    border: 3px solid var(--main-color);
+    padding: 30px 50px;
+    border-radius: 4rem;
+    box-shadow: 0 0 10px var(--main-color);
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+.timeline-content:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 25px var(--main-color);
+}
+.timeline-content h3{
+    font-size: 20px;
+    color: white;
+    margin: 0 0 10px;
+    font-weight: 500;
+}
+.timeline-content p{
+    color: white;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 22px;
 }
 
-.menu button:focus {
-    outline: none;
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--main-color);
+}
+::-webkit-scrollbar-track{
+    background-color: var(--bg-color);
+    width: 50px;
 }
 
-.menu button.active {
-    color: #fff;
-    text-shadow: 0 0 10px #40e0d0, 0 0 20px #40e0d0;
+.projects {
+    background-color: var(--bg-color);
 }
 
-.content {
-    flex: 1;
+.wrapper {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    height: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+}
+
+.card {
+    width: 80px;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 2rem;
+    border: 3px solid var(--main-color);
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: 0.6s cubic-bezier(0.28, -0.03, 0, 0.99);
+    box-shadow: 0 0 10px var(--main-color);
+}
+
+.card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 0 20px var(--main-color);
+}
+
+.card .row {
+    color: var(--main-color);
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 5px;
+}
+
+.card .row .icon {
+    background: var(--second-bg-color);
+    color: white;
+    border-radius: 20%;
+    width: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 15px;
+}
+
+.card .row .description {
+    background: var(--second-bg-color);
+    border-radius: 2rem;
+    text-align: left;
+    padding-left: 15px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    overlay: hidden;
+    height: 95px;
+    width: 300px;
+    opacity: 0;
+    transform: translateY(30px);
+    transition-delay: 0.3s;
+    transition: all 0.3s ease;
+}
+
+.description p {
+    font-size: 16px;
+    color: var(--text-color);
+    padding-top: 5px;
+}
+
+.description h4 {
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.projects input{
+    display: none;
+}
+
+input:checked+label {
+    width: 600px;
+}
+
+input:checked+label .description {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
+
+.card[for="c1"] {
+    background-image: url('./images/img1.jpg');
+}
+
+.card[for="c2"] {
+    background-image: url('./images/img2.jpg');
+}
+
+.card[for="c3"] {
+    background-image: url('./images/img3.jpg');
+}
+
+.card[for="c4"] {
+    background-image: url('./images/img4.jpg');
+}
+
+.contact{
+    background-color: var(--second-bg-color);
+}
+.contact h2{
+    margin-bottom: 3rem;
+    color: white;
+}
+.contact form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    margin: 5rem auto;
     text-align: center;
 }
-
-.section {
-    display: none;
-    flex-direction: column;
-    align-items: center;
+.contact form .input-box{
+    display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+}
+.contact form .input-box input,
+.contact form textarea{
     width: 100%;
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-}
-
-.section.active {
-    display: flex;
-}
-
-
-/* Contact form styles */
-#contactForm {
-    width: 70vw;
-    max-width: 800px;
-    /* You can keep this to limit the form width on very wide screens */
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    /* This will distribute the space inside the form */
-}
-
-#contactForm input,
-#contactForm textarea {
-    background: #333;
-    /* Dark gray background */
-    border: 1px solid #555;
-    color: #40e0d0;
-    /* Turquoise text */
-    margin-bottom: 10px;
-    padding: 1vw;
-    /* Padding based on the width of the viewport */
-    width: calc(100% - 2vw);
-    /* Adjust width to account for padding */
-}
-
-#contactForm textarea {
-    height: 20vh;
-    /* Height based on the viewport height */
+    padding: 2.5rem;
+    font-size: 1.8rem;
+    color: var(--text-color);
+    background: var(--bg-color);
+    border-radius: 2rem;
+    border: 2px solid var(--main-color);
+    margin: 1.5rem 0;
     resize: none;
-    /* Prevents resizing the textarea */
 }
-
-#contactForm button {
-    background: #111;
-    /* Black background */
-    border: 2px solid #40e0d0;
-    /* Turquoise outline */
-    color: #40e0d0;
-    /* Turquoise text */
-    padding: 1vw 2vw;
-    /* Padding based on the width of the viewport */
-    cursor: pointer;
-    transition: all 0.3s;
+.contact form .btn{
+    margin-top: 2rem;
 }
-
-#contactForm button:hover {
-    background: #40e0d0;
-    /* Turquoise background on hover */
-    color: #111;
-    /* Black text on hover */
-}
-
-/* Adjusts the form output display */
-#formOutput {
-    margin-top: 20px;
-    color: #fff;
-}
-
-
-/* circuit */
-
-.circuit-container {
+.footer{
     position: relative;
+    bottom: 0;
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 40px 0;
+    background-color: var(--bg-color);
+}
+.footer .social{
+    text-align: center;
+    padding-bottom: 25px;
+    color: var(--main-color);
+}
+.footer .social a{
+    font-size: 25px;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 10px;
+    transition: 0.3s ease-in-out;
+}
+.footer .social a:hover{
+    transform: scale(1.2)translateY(-10px);
+    background-color: var(--main-color);
+    color: black;
+    box-shadow: 0 0 25px var(--main-color);
+}
+.footer ul{
+    margin-top: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
+}
+.footer ul li a{
+    color: white;
+    border-bottom: 3px solid transparent;
+    transition: 0.3s ease-in-out;
+}
+.footer ul li a:hover{
+    border-bottom: 3px solid var(--main-color);
+}
+.footer ul li{
+    display: inline-block;
+    padding: 0 15px;
+}
+.footer .copyright{
+    margin-top: 50px;
+    text-align: center;
+    font-size: 16px;
+    color: white;
 }
 
-.circuit {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+@media(max-width:1285px){
+    html{
+        font-size: 55%;
+    }
 }
-
-.central-text {
-    z-index: 1;
-    /* Ensure the text is above the SVG */
+@media(max-width:991px){
+    header{
+        padding: 2rem 3%;
+    }
+    section{
+        padding: 10rem 3% 2rem;
+    }
+    .timeline-items::before{
+        left: 7px;
+    }
+    .timeline-item:nth-child(odd){
+        padding: 0;
+        text-align: left;
+    }
+    .timeline-item:nth-child(odd),
+    .timeline-item:nth-child(even){
+        padding-left: 37px;
+    }
+    .timeline-dot{
+        left: 0;
+    }
+    .contact form{
+        flex-direction: column;
+    }
+    .footer{
+        padding: 2rem 3%;
+    }
 }
-
-/* Initial hidden path style */
-.path {
-    stroke: #40e0d0;
-    stroke-width: 2;
-    fill: none;
-    stroke-dasharray: 1000;
-    /* Length should be longer than the path itself */
-    stroke-dashoffset: 1000;
-    /* Start with a full offset to hide the path */
-    transition: stroke-dashoffset 2s;
-    /* Animation duration */
-}
-
-/* On activation, the path will draw itself */
-.path.drawn {
-    stroke-dashoffset: 0;
-    /* Setting offset to 0 to draw the path */
+@media(max-width:895px){
+    #menu-icon{
+        display: block;
+    }
+    .navbar{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 50%;
+        padding: 1rem 3%;
+        background: rgba(0, 0, 0, 0.8);
+        backdrop-filter: blur(20px);
+        border-bottom-left-radius: 2ren;
+        border-left: 2px solid var(--main-color);
+        border-bottom: 2px solid var(--main-color);
+        display: none;
+    }
+    .navbar.active{
+        display: block;
+    }
+    .navbar a{
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+        color: white;
+    }
+    .home{
+        flex-direction: column-reverse;
+        margin: 5rem 4rem;
+    }
+    .home-content h3{
+        font-size: 2.6rem;
+    }
+    .home-content h1{
+        font-size: 8rem;
+        margin-top: 3rem;
+    }
+    .home-content p{
+        max-width: 600px;
+        margin: 0 auto;
+    }
+    .home-img img{
+        width: 56vw;
+    }
 }
