--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,33 @@ span{
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
 }
+.tooltip-text{
+    font-size: 15px;
+    visibility: hidden;
+    width: 120px;
+    background-color: var(--second-bg-color);
+    color: var(--main-color);
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+.tooltip-text::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.3);
+}
 .btn{
     display: inline-block;
     padding: 1rem 2.8rem;
@@ -344,7 +371,6 @@ span{
 .projects {
     background-color: var(--bg-color);
 }
-
 .wrapper {
     width: 100%;
     height: 80vh;
@@ -352,14 +378,12 @@ span{
     align-items: center;
     justify-content: center;
 }
-
 .container {
     height: 400px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: start;
 }
-
 .card {
     width: 80px;
     background-size: cover;
@@ -373,30 +397,16 @@ span{
     transition: 0.6s cubic-bezier(0.28, -0.03, 0, 0.99);
     box-shadow: 0 0 10px var(--main-color);
 }
-
 .card:hover {
     transform: scale(1.03);
     box-shadow: 0 0 20px var(--main-color);
 }
-
 .card .row {
     color: var(--main-color);
     display: flex;
     flex-wrap: nowrap;
     padding-bottom: 5px;
 }
-
-.card .row .icon {
-    background: var(--second-bg-color);
-    color: white;
-    border-radius: 20%;
-    width: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px;
-}
-
 .card .row .description {
     background: var(--second-bg-color);
     border-radius: 2rem;
@@ -413,43 +423,34 @@ span{
     transition-delay: 0.3s;
     transition: all 0.3s ease;
 }
-
 .description p {
     font-size: 16px;
     color: var(--text-color);
     padding-top: 5px;
 }
-
 .description h4 {
     font-size: 20px;
     text-transform: uppercase;
 }
-
 .projects input{
     display: none;
 }
-
 input:checked+label {
     width: 600px;
 }
-
 input:checked+label .description {
     opacity: 1 !important;
     transform: translateY(0) !important;
 }
-
 .card[for="c1"] {
     background-image: url('./images/img1.jpg');
 }
-
 .card[for="c2"] {
     background-image: url('./images/img2.jpg');
 }
-
 .card[for="c3"] {
     background-image: url('./images/img3.jpg');
 }
-
 .card[for="c4"] {
     background-image: url('./images/img4.jpg');
 }
@@ -623,5 +624,40 @@ input:checked+label .description {
     }
     .home-img img{
         width: 56vw;
+    }
+}
+
+@media (max-width: 768px) {
+    .wrapper{
+        height: auto;
+    }
+    .container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .card{
+        width: 90%;
+        height: 100px;
+        margin: 10px;
+        justify-items: left;
+        padding-left: 5px;
+    }
+    .card .row{
+        flex-direction: column;
+    }
+    .card .row .description{
+        width: 90%;
+        height: auto;
+        padding: 15px;
+    }
+    .description h4{
+        font-size: 18px;
+    }
+    .description p{
+        font-size: 14px;
+    }
+    input:checked + label{
+        width: 90%;
+        height: 400px;
     }
 }
