--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Reset general para todos los elementos */
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +9,8 @@
     scroll-behavior: smooth;
     font-family: "Poppins", sans-serif;
 }
+
+/* Variables CSS para colores */
 :root {
     --bg-color: #080808;
     --second-bg-color: #131313;
@@ -15,6 +18,7 @@
     --main-color: #49fbe9;
 }
 
+/* Ajustes generales para el HTML */
 html{
     font-size: 60%;
     overflow-x: hidden;
@@ -23,6 +27,8 @@ body{
     background: var(--bg-color);
     color: var(--text-color);
 }
+
+/* Estilos para el encabezado fijo */
 .header{
     position: fixed;
     top: 0;
@@ -36,6 +42,8 @@ body{
     align-items: center;
     z-index: 5;
 }
+
+/* Estilos para el logo */
 .logo{
     font-size: 3rem;
     color: var(--text-color);
@@ -50,6 +58,8 @@ body{
 .logo span{
     text-shadow: 0 0 25px var(--main-color);
 }
+
+/* Estilos para los enlaces de la barra de navegación */
 .navbar a{
     font-size: 1.8rem;
     color: var(--text-color);
@@ -63,16 +73,21 @@ body{
     color: var(--main-color);
     border-bottom: 3px solid var(--main-color);
 }
+
+/* Icono del menú para pantallas pequeñas */
 #menu-icon{
     font-size: 3.6rem;
     color: var(--main-color);
     display: none;
 }
 
+/* Estilos generales para las secciones */
 section{
     min-height: 100vh;
     padding: 10rem 12% 10rem;
 }
+
+/* Sección de inicio */
 .home{
     display: flex;
     align-items: center;
@@ -104,6 +119,8 @@ span{
     margin-top: 1.5rem;
     line-height: 1;
 }
+
+/* Imagen de perfil */
 .home-img{
     border-radius: 50%;
 }
@@ -116,12 +133,16 @@ span{
     cursor: pointer;
     transition: 0.4s ease-in-out;
 }
+
+/* Párrafo de inicio */
 .home-content p{
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.8;
     max-width: 1000px;
 }
+
+/* Iconos */
 .social-icons a{
      display: inline-flex;
      justify-content: center;
@@ -142,6 +163,7 @@ span{
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
 }
+/* ToolTip */
 .tooltip-text{
     font-size: 15px;
     visibility: hidden;
@@ -169,6 +191,7 @@ span{
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.3);
 }
+/* Botones */
 .btn{
     display: inline-block;
     padding: 1rem 2.8rem;
@@ -203,6 +226,7 @@ span{
     background-color: var(--main-color);
     color: black;
 }
+/* Animación de texto de inicio*/
 .text-animation{
     font-size: 34px;
     font-weight: 600;
@@ -272,11 +296,15 @@ span{
         width: calc(100% + 8px);
     }
 }
+
+/* Títulos */
 .heading{
     font-size: 8rem;
     text-align: center;
     margin: 5rem 0;
 }
+
+/* Linea de Tiempo */
 .aboutme{
     padding: 100px 15px;
     background: var(--second-bg-color);
@@ -357,6 +385,7 @@ span{
     line-height: 22px;
 }
 
+/*Barra lateral*/
 ::-webkit-scrollbar{
     width: 15px;
 }
@@ -368,23 +397,35 @@ span{
     width: 50px;
 }
 
+/* Sección de proyectos */
 .projects {
     background-color: var(--bg-color);
+    padding: 100px 15px;
+}
+.projects h2{
+    margin-bottom: 5rem;
 }
 .wrapper {
     width: 100%;
-    height: 80vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .container {
-    height: 400px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: start;
 }
+.card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Cartas de los proyectos */
 .card {
+    height: 400px;
     width: 80px;
     background-size: cover;
     cursor: pointer;
@@ -407,29 +448,35 @@ span{
     flex-wrap: nowrap;
     padding-bottom: 5px;
 }
-.card .row .description {
+.card .row h4{
+    padding-left: 10px;
+    text-transform: uppercase;
+    font-size: 10px;
+    text-align: center;
+    color: var(--main-color);
+    display: inline-block;
+}
+/* Descripciones fuera de las cartas */
+.description {
     background: var(--second-bg-color);
     border-radius: 2rem;
     text-align: left;
-    padding-left: 15px;
-    display: flex;
+    padding: 5px;
+    margin-top: 10px;
+    box-shadow: 0 0 10px var(--main-color);
     justify-content: center;
     flex-direction: column;
     overlay: hidden;
     height: 95px;
-    width: 300px;
+    width: 80px;
     opacity: 0;
     transform: translateY(30px);
-    transition-delay: 0.3s;
-    transition: all 0.3s ease;
-}
-.description p {
-    font-size: 16px;
-    color: var(--text-color);
-    padding-top: 5px;
+    transition: opacity 0.1s ease, width 0.5s cubic-bezier(0.28, -0.03, 0, 0.99);
 }
 .description h4 {
+    padding: 5px;
     font-size: 20px;
+    font-weight: bold;
     text-transform: uppercase;
     color: var(--main-color);
     transition: 0.3s ease-in-out;
@@ -437,20 +484,60 @@ span{
 }
 .description h4:hover {
     color: var(--text-color);
-    transform: scale(1.05)translateY(-1px);
+    transform: scale(1.05) translateY(-1px);
     box-shadow: 0 0 15px var(--main-color);
     background-color: rgba(82, 255, 255, 0.696);
     border-radius: 5px;
 }
-.projects input{
+.description p {
+    font-size: 18px;
+    color: var(--text-color);
+    padding: 10px;
+}
+.description h3 {
+    font-size: 20px;
+    color: var(--text-color);
+    margin-bottom: 10px;
+}
+
+.description ul {
+    font-size: 16px;
+    color: var(--text-color);
+    list-style-type: none;
+    margin-left: 20px;
+}
+
+.description ul li {
+    font-size: 16px;
+    color: var(--text-color);
+    margin-bottom: 8px;
+}
+
+.description ul li strong {
+    font-size: 16px;
+    color: var(--text-color);
+    font-weight: bold;
+}
+.description ul ul {
+    font-size: 16px;
+    color: var(--text-color);
+    margin-top: 8px;
+    margin-left: 20px;
+}
+/* Ocultar los inputs de radio */
+.projects input {
     display: none;
 }
+/* Ampliar la carta seleccionada */
 input:checked+label {
     width: 600px;
 }
-input:checked+label .description {
+/* Mostrar la descripción correspondiente a la carta seleccionada */
+input:checked+label+.description {
     opacity: 1 !important;
     transform: translateY(0) !important;
+    height: auto;
+    width: 600px;
 }
 .card[for="c1"] {
     background-image: url('./images/img1.jpg');
@@ -465,6 +552,7 @@ input:checked+label .description {
     background-image: url('./images/img4.jpg');
 }
 
+/* Formulario de contacto */
 .contact{
     background-color: var(--second-bg-color);
 }
@@ -500,6 +588,8 @@ input:checked+label .description {
 .contact form .btn{
     margin-top: 2rem;
 }
+
+/* Pie de página */
 .footer{
     position: relative;
     bottom: 0;
@@ -585,11 +675,13 @@ input:checked+label .description {
     color: white;
 }
 
+/* AJustes para móvil */
 @media(max-width:1285px){
     html{
         font-size: 55%;
     }
 }
+/* Linea de tiempo en móvil */
 @media(max-width:991px){
     header{
         padding: 2rem 3%;
@@ -618,6 +710,7 @@ input:checked+label .description {
         padding: 2rem 3%;
     }
 }
+/* Sección de incio en móvil*/
 @media(max-width:895px){
     #menu-icon{
         display: block;
@@ -663,10 +756,11 @@ input:checked+label .description {
         width: 56vw;
     }
 }
-
+/* Cartas en móvil */
 @media (max-width: 768px) {
     .wrapper{
         height: auto;
+        width: 100%;
     }
     .container{
         flex-direction: column;
@@ -674,17 +768,17 @@ input:checked+label .description {
     }
     .card{
         width: 90%;
-        height: 100px;
-        margin: 10px;
+        height: 80px;
+        margin: 10px 0;
         justify-items: left;
         padding-left: 5px;
     }
     .card .row{
         flex-direction: column;
     }
-    .card .row .description{
+    .description{
         width: 90%;
-        height: auto;
+        height: 10px;
         padding: 15px;
     }
     .description h4{
@@ -696,5 +790,9 @@ input:checked+label .description {
     input:checked + label{
         width: 90%;
         height: 400px;
+    }
+    input:checked+label+.description{
+        width: 90%;
+        height: 300px;
     }
 }
